# blrec-rclone-upload

./: .dockerignore  Dockerfile  LICENSE  config.json  main.py  pyproject.toml  readme.md
.github/workflows/: ghcr.yml
app/: main.py
