[tool.poetry]
name = "bilibilirecorder"
version = "0.1.0"
description = ""
authors = ["Taokyla <admin@taokyla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.30.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
